spacing in Basic Info and Header fixed

--- a/client/src/css/ResourceDetail.css
+++ b/client/src/css/ResourceDetail.css
@@ -38,7 +38,6 @@
 
 .resource-detail .card-row {
   padding-top: 0px;
-  padding-bottom: 0px;
 }
 
 .resource-detail .ant-card-bordered {
@@ -56,6 +55,7 @@
 
 .resource-detail .anticon {
   height: 20px;
+  padding-right: 15px;
 }
 
 .resource-detail .ant-card-body {
